Modificado lighttpd.conf para tener index.html, borrado sitio viejo

--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -1,5 +1,5 @@
 #server.document-root = "/chemin_vers/lighttpd"
-server.document-root = "/home/proyecto/Elec-Xbee"
+server.document-root = "/home/proyecto/Elec-XBee"
 
 server.port = 8080
 
@@ -12,7 +12,7 @@ mimetype.assign = (
   ".js" => "text/javascript",
 )
 
-index-file.names = ( "proyecto_1.html" )
+index-file.names = ( "index.html" )
 
 # mod_websocket configration
 
